# chip8-emulator

./: Cargo.toml
src/: chip8-logo.ch8  main.rs
