[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
rand = "0.8.5"

[build]
target = "x86_64-pc-windows-gnu"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.arm-linux-androideabi]
linker = "arm-linux-androideabi-gcc"

[target.arm-linux-androideabi-clang]
linker = "arm-linux-androideabi-clang"
